I think reg and password reset are working now

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -3,7 +3,7 @@
   <ol>
     <li>Go to <%= link_to 'CoLab', root_url %>.</li>
     <li>Log out if you are currently logged in.</li>
-    <li><%= link_to 'Click this password reset link.', edit_password_url(@resource, reset_password_token: @token) %></li>
+    <li><%= link_to 'Click this password reset link.', password_change_url(reset_password_token: @token) %></li>
     <li>Enter and confirm your new password in the page.</li>
     <li>Click the 'Change my password' button</li>
     &hellip;and you're done!</p>
