--- a/app/views/devise/mailer/reset_password_instructions.text.erb
+++ b/app/views/devise/mailer/reset_password_instructions.text.erb
@@ -4,7 +4,7 @@ Someone has requested a change to your CoLab password. Follow these steps to do 
 
 1. Navigate to <%= root_url %>.
 2. Log out if you are currently logged in.
-3. Click this password reset link. <%= edit_password_url(@resource, reset_password_token: @token) %>.
+3. Click this password reset link. <%= password_change_url(reset_password_token: @token) %>.
 4. Enter and confirm your new password in the page.
 5. Click the 'Change my password' button.
 
