--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -9,5 +9,5 @@
     <li>You are an instructor in a course that's using <%= link_to 'CoLab', root_url %></li>
   </ul>
   Please confirm your account email by clicking the link below and completing the registration process:</p>
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to 'Confirm my account', confirm_me_url(@resource, confirmation_token: @resource.confirmation_token) %></p>
 <p>CoLab Support</p>
