--- a/app/views/devise/mailer/confirmation_instructions.text.erb
+++ b/app/views/devise/mailer/confirmation_instructions.text.erb
@@ -9,6 +9,6 @@ You are receiving this either because:
  -- You are an instructor in a course that's using CoLab.
 Please confirm your account email by clicking the link below and completing the registration process:
 
-<%= confirmation_url(@resource, confirmation_token: @token) %>
+<%= confirm_me_url(@resource, confirmation_token: @resource.confirmation_token) %>
 
 CoLab Support
