--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Roboto:300,400,500' %>
     <%= javascript_pack_tag 'application' %>
     <%= csrf_meta_tags %>
+    <%= javascript_pack_tag "application" %>
   </head>
   <body>
     <div data-role="page" data-theme="<%= theme_code %>">
