implementing TimeShift for date mockups

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,11 @@
     <title><%= t :title %> <%= " : " + @title unless @title.nil? %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Roboto:300,400,500' %>
-    <%= javascript_pack_tag 'application' %>
+    <% if true # && Rails.env.test? # %>
+      <%= javascript_pack_tag 'application', 'testing' %>
+    <% else %>
+      <%= javascript_pack_tag 'application' %>
+    <% end %>
     <%= stylesheet_pack_tag 'application' %>
     <%= csrf_meta_tags %>
   </head>
