--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <%= javascript_pack_tag 'application' %>
     <%= stylesheet_pack_tag 'application' %>
     <%= csrf_meta_tags %>
+    <%= javascript_pack_tag "application" %>
   </head>
   <body>
       <%= react_component "PageWrapper", {
