making icon accessible

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <%= favicon_link_tag '/assets/images/favicon.ico' %>
+  <%= favicon_link_tag '/images/favicon.ico' %>
   <head>
     <%= render 'layouts/shared/google_analytics' %>
     <title><%= t :title %> <%= " : " + @title unless @title.nil? %></title>
