--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -2,8 +2,8 @@ body {
   /* max-width: 50rem; */
   padding: 1rem;
   margin: auto;
-  background: hsl(35, 80%, 94%);
+  background: hsl(240, 86%, 45%);
   color: hsl(35, 50%, 20%);
-  text-shadow: 0 1px 1px white;
+  /* text-shadow: 0 1px 1px white; */
   font: 120%/1.6 Baskerville, Palatino Linotype, Palatino, serif;
 }
