--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -20,7 +20,6 @@ a:hover, a:active {
 }
 
 .mainNav {
-  display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1rem;
@@ -31,6 +30,14 @@ a:hover, a:active {
   left: 0;
   background-color: navy;
   color: azure;
+}
+.mainNav .p-toolbar-group-start {
+  display: block;
+  width: 80%;
+  align-items: center;
+}
+.mainNav .p-toolbar-group-end {
+  width: 15%%;
 }
 
 .mainContent {
