--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,9 @@
   </head>
   <body>
       <%= react_component "PageWrapper", props: {
-          token: form_authenticity_token,
-          getEndpointsUrl: endpoints_path
+          # token: form_authenticity_token,
+          getEndpointsUrl: endpoints_path,
+          debug: Rails.env.test?,
 
       }
       %>
