--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -83,3 +83,8 @@ a:hover, a:active {
 .p-datepicker-trigger {
   background-color: rgb( 63, 81, 181 );
 }
+
+.logo_nav:hover {
+  filter: brightness(150%);
+  cursor: pointer;
+}
