--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -6,6 +6,7 @@ body {
   color: hsl(35, 50%, 20%);
   /* text-shadow: 0 1px 1px white; */
   font: 120%/1.6 Baskerville, Palatino Linotype, Palatino, serif;
+  width: 100%;
 }
 
 a {
@@ -111,4 +112,12 @@ a:active {
 
 .p-datepicker-trigger {
   background-color: rgb(63, 81, 181);
+}
+
+.p-datatype-date {
+  max-width: 100%;
+}
+
+.content-table-data {
+  text-wrap: wrap;
 }
