optimization and work towards LTI

--- a/app/views/administrative_mailer/re_invite.html.erb
+++ b/app/views/administrative_mailer/re_invite.html.erb
@@ -10,7 +10,7 @@
     </P>
     <ul>
       <% @user.rosters.each do |roster| %>
-        <li><%= roster.course.name %></li>
+        <li><%= roster.course_name %></li>
       <% end %>
     </ul>
     <P>
