Added theme color to profile. Style work still needed.

--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -19,6 +19,10 @@ a {
   text-decoration: none;
 }
 
+.p-button {
+  color: var(--tertiary-color);
+}
+
 a:hover,
 a:active {
   color: var(--tertiary-color);
